# programmer-dvorak-compose

./: .gitignore  .yamllint  DEBUG.md  LICENSE  README.md  flake.nix  home-manager.nix  info.plist  nix-darwin.nix  package.nix  pyproject.toml  renovate.json  version.plist
.github/workflows/: ci.yml
resources/: programmer_dvorak_compose.keylayout
scripts/: __init__.py  build_debug_keylayout.py  generate-keylayout.py  generate_keylayout.py
tests/: __init__.py  test_generate_keylayout.py
tests/testdata/: base.keylayout.xml
